--- a/news.html
+++ b/news.html
@@ -37,6 +37,7 @@
 								<li><a href="fzx_personal.html">冯泽心老师</a></li>
                                 <li><a href="yt_personal.html">杨通老师</a></li>
                                 <li><a href="cc_personal.html">池骋老师</a></li>
+                                <li><a href="xjh_personal.html">熊江浩老师</a></li>
 							</ul>
                         </li>
 						<li><a href="research.html">研究方向</a></li>
@@ -59,7 +60,7 @@
 								<!-- Features -->
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
- 
+<p>[2022-08-08] 欢迎吕鑫、单跃凡、孙佳平、高丽娜、蓝天翔、刘晋纲、刘永琦、潘兴华、王业晟、张源哲、周昀琦11位同学加入实验室团队！</p>      
 <p>[2022-07-02] 我们有关AR头戴显示器设计与制造的综述论文入选<strong>Light: Advanced Manufacturing期刊2021年度优秀论文</strong>（共10篇论文入选）。<a href="https://www.light-am.com/article/doi/10.37188/lam.2021.024">论文链接</a></p>  
 <p>[2022-06-29] 我们有关大视场二维扩瞳几何阵列波导AR系统设计方法的论文在线发表于<strong>Applied Optics</strong>。</p>
 <p>[2022-06-27] 实验室2022届研究生毕业。感谢王其为、刘悦、左琪、周斐艳、汪希萌、查文杰、李玉银、陈文晨8位同学为实验室作出的贡献，祝大家前程似锦！</p>
@@ -470,7 +471,7 @@
 						<!-- Copyright -->
 							<div id="copyright">
 								<ul class="menu">
-									<li>&copy; 2020-2021 BIT Optical Imaging and Computing Lab. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+									<li>&copy; 2020-2022 BIT Optical Imaging and Computing Lab. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 								</ul>
 							</div>
 
