--- a/publications.html
+++ b/publications.html
@@ -52,6 +52,7 @@ a:active {
 								<li><a href="fzx_personal.html">冯泽心老师</a></li>
                                 <li><a href="yt_personal.html">杨通老师</a></li>
                                 <li><a href="cc_personal.html">池骋老师</a></li>
+                                <li><a href="xjh_personal.html">熊江浩老师</a></li>
 							</ul>
                         </li>
 						<li><a href="research.html">研究方向</a></li>
@@ -394,6 +395,9 @@ DOI：10.3969/j.issn.1007-2276.2014.10.025</a></p>
 <p>[34]	杨通, 程德文, 王涌天. 一种自由曲面离轴反射系统初始结构生成方法. 201910472849.1. 申请日：2019.05.31. 授权日：2020.08.11.</p> 
 <p>[35]	杨通, 倪俊豪, 程德文, 王涌天. 一种自由曲面成像系统面形公差分析方法. 201910978048.2. 申请日：2019.10.15. 授权日：2020.10.16. </p>
 <p>[36]	杨通, 段璎哲, 程德文, 王涌天. 基于自由曲面基底相位元件的离轴三反成像系统. 201911215627.8. 申请日：2019.12.02. 授权日：2021.02.02. </p>
+<p>[37]	杨通, 程德文, 王涌天. 一种自由曲面成像系统的设计方法. 202011015278.8. 申请日：2020.09.24. 授权日：2021.07.27.</p> 
+<p>[38]	杨通, 倪俊豪, 程德文, 王涌天. 一种基于高斯径向基函数曲面的成像系统设计方法. 202110365947.2. 申请日：2021.04.06. 授权日：2022.02.11 </p>
+<p>[39]	杨通, 陈文晨, 程德文, 王涌天. 一种基于深度学习的自由曲面成像系统初始结构生成方法. 202110423211.6. 申请日：2021.04.20. 授权日：2022.04.08. </p>
 
                                         
 										
@@ -436,7 +440,7 @@ DOI：10.3969/j.issn.1007-2276.2014.10.025</a></p>
 						<!-- Copyright -->
 							<div id="copyright">
 								<ul class="menu">
-									<li>&copy; 2020-2021 BIT Optical Imaging and Computing Lab. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+									<li>&copy; 2020-2022 BIT Optical Imaging and Computing Lab. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 								</ul>
 							</div>
 
