--- a/xjh_personal.html
+++ b/xjh_personal.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>王涌天 - 北理工光学成像与计算实验室</title>
+		<title>熊江浩 - 北理工光学成像与计算实验室</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -61,7 +61,7 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a class="image featured"><img src="images/wyt_p.jpg" alt="" /></a>
+															<a class="image featured"><img src="images/xjh_p2.jpg" alt="" /></a>
 															
 														</section>
 
@@ -70,19 +70,23 @@
                                                 
                                                 <div class="col-9">
 
-<h2 align="left">王涌天</h2>
-<h3 align="left">博士 教授 博士生导师</h3>
-<h3 align="left">Email：wyt@bit.edu.cn</h3>
+<h2 align="left">熊江浩</h2>
+<h3 align="left">博士 特别副研究员 硕士生导师</h3>
+<h3 align="left">Email：jhxiong@bit.edu.cn</h3>
 <p>&nbsp;</p>
 <h3>个人简介</h3>
-<p>王涌天，男，博士。北京理工大学杰出教授，教育部创新团队带头人、杰青，光电学院和计算机学院博导，北京市混合现实与新型显示工程技术研究中心主任。</p>
+<p>熊江浩，男，北京理工大学光电学院特别副研究员、硕士生导师。在虚拟/增强现实光学现实和全息液晶光学领域从事教学和科研工作。参与了新型反射式全息液晶器件的早期研究，取得了一系列奠基性成果。并基于此开展了一系列虚拟/增强现实的研究工作，解决了众多工程难题。以第一作者在Light: Science and Applications, eLight, Advanced Photonics Research, Optics Letters, Optics Express等国际顶级和著名期刊上发表论文14篇，并以合著作者在PhotoniX, iScience, Advanced Optical Materials等国际期刊上发文16篇。目前谷歌学术引用1000余次，H因子19。多次在SID Display Week，SPIE AR/VR/MR等光学显示知名国际会议上做报告，并且两次获得SID杰出论文奖，其中一次被评为JSID年度最佳论文。此外，还获得了国际液晶协会(ILCS)和Meta Reality Labs共同颁发的液晶研究杰出奖的最高钻石奖。</p>
+<h3>教育经历</h3>
+<p>2017.08-2022.05，(美国)中佛罗里达大学，光学与光子学，博士（导师Shin-Tson Wu）</p>
+<p>2013.08-2017.06，中国科学技术大学，物理学院，光电信息科学与工程，理学学士</p>
+<p>2013.08-2017.06，中国科学技术大学，计算机学院，计算机科学与技术，工学学士</p>
 
+<h3>工作经历</h3>
 
-<h3>社会与学术兼职</h3>
-<p>兼任全国政协委员，科技部云计算和大数据国家重点研发专项总体专家组副组长，全国信息技术标准化技术委员会委员、虚拟现实与增强现实标准工作组组长，中国图象图形学学会副理事长，中国光学工程学会常务理事，中国光学学会监事，中国计算机学会理事，北京图象图形学学会理事长，北京光学学会副理事长，并先后被国际工程光学学会(SPIE)、英国工程技术学会(IET)、美国光学学会(OSA)、中国光学学会(COS)和中国仪器仪表学会(CIS)评选为会士(Fellow)。</p>
+<p>2022.08-至今，北京理工大学光电学院，预聘助理教授/特别副研究员</p>
 
-<h3>研究领域与科研成果</h3>
-<p>长期在技术光学、虚拟现实和增强现实领域从事教学和科研工作，有关成果得到广泛应用，获得国家技术发明奖和国家科技进步奖各1项，省部级和国家一级学会科技奖励10余项；发表专著3部、SCI论文260余篇，授权国内外发明专利150余项。</p>
+<h3>研究领域</h3>
+<p>全息液晶光学、虚拟/增强现实显示、计算全息、3D/光场显示</p>
 
 
 
