--- a/yt_personal.html
+++ b/yt_personal.html
@@ -37,6 +37,7 @@
 								<li><a href="fzx_personal.html">冯泽心老师</a></li>
                                 <li><a href="yt_personal.html">杨通老师</a></li>
                                 <li><a href="cc_personal.html">池骋老师</a></li>
+                                <li><a href="xjh_personal.html">熊江浩老师</a></li>
 							</ul>
                         </li>
 						<li><a href="research.html">研究方向</a></li>
@@ -74,7 +75,7 @@
 <h3 align="left">Email：yangtong@bit.edu.cn</h3>
 <p>&nbsp;</p>
 <h3>个人简介</h3>
-<p>杨通，男，博士，北京理工大学光电学院特别副研究员、博士生导师。长期在应用光学、光学设计领域从事教学和科研工作，主要研究方向包括光学设计、自由曲面光学、光学成像、衍射与微纳光学等方面。主持或参与国家自然科学基金、北京市自然科学基金、国家重点研发计划等项目。以第一或者通讯作者在Light: Science & Applications（Nature旗下期刊，2021影响因子17.782）、Optics Express等期刊发表论文20余篇。已获得授权发明专利40项。入选中国科协青年人才托举计划项目，曾获得金国藩青年学子奖（奖励高校教师）、第四届全国光学工程学科优秀博士学位论文等奖励。指导的研究生多次获得国家奖学金、校级或市级优秀毕业生等荣誉称号，或者在光学设计竞赛中获奖。</p>
+<p>杨通，男，博士，北京理工大学光电学院特别副研究员、博士生导师。长期在应用光学、光学设计领域从事教学和科研工作，主要研究方向包括光学设计、自由曲面光学、光学成像、衍射与微纳光学等方面。主持或参与国家自然科学基金、北京市自然科学基金、国家重点研发计划等项目。发表论文50篇，其中以第一或者通讯作者在Light: Science & Applications（Nature旗下期刊，2021年影响因子20.257）、Optics Express等SCI期刊发表论文20余篇。已获得授权发明专利40项，包括美国专利16项。入选中国科协青年人才托举计划项目，曾获得金国藩青年学子奖（奖励高校教师）、第四届全国光学工程学科优秀博士学位论文等奖励。指导的研究生多次获得校级优秀学位论文、市级或校级优秀毕业生、国家奖学金等荣誉称号，或者在光学设计竞赛中获奖。</p>
 <h3>教育经历</h3>
 <p>2012.08-2017.07，清华大学，光学工程专业，博士</p>
 <p>2008.09-2012.06，天津大学，（光电）信息工程专业，学士</p>
@@ -91,7 +92,7 @@
 <p>主讲本科生课程《复变函数与数理方程》、研究生课程《光学自由曲面技术》</p>
 
 <h3>学术兼职</h3>
-<p>OSA、SPIE、EOS会员。Optics Express、Applied Optics、Journal of the Optical Society of America A、Journal of Physics: Photonics、Chinese Optics Letters等国际期刊审稿人。</p>
+<p>OSA、SPIE、EOS会员。Optics Express、Applied Optics、Journal of the Optical Society of America A、Journal of Physics: Photonics、Chinese Optics Letters等10余个国际期刊审稿人。</p>
 
 <h3>代表性学术成果</h3>
 <p></p>
@@ -128,7 +129,7 @@
 
 <p>[15] Tong Yang, Dewen Cheng*, and Yongtian Wang, "Aberration analysis for freeform surface terms overlay on general decentered and tilted optical surfaces," <strong>Optics Express</strong> 26(6), 7751-7770 (2018).</p>
 
-<p>[16] Tong Yang, Guofan Jin, and Jun Zhu*, “Automated design of freeform imaging systems,” <strong>Light: Science & Applications</strong> 6, e17081 (2017). <strong>(Nature旗下期刊，2021影响因子17.782)</strong></p>
+<p>[16] Tong Yang, Guofan Jin, and Jun Zhu*, “Automated design of freeform imaging systems,” <strong>Light: Science & Applications</strong> 6, e17081 (2017). <strong>(Nature旗下期刊，2021年影响因子20.257)</strong></p>
 
 <p>[17] Tong Yang, Jun Zhu*, and Guofan Jin, “Design of freeform imaging systems with linear field-of-view using a construction and iteration process,” <strong>Optics Express</strong> 22, 3362-3374 (2014).</p>
 
@@ -202,7 +203,7 @@
 						<!-- Copyright -->
 							<div id="copyright">
 								<ul class="menu">
-									<li>&copy; 2020-2021 BIT Optical Imaging and Computing Lab. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+									<li>&copy; 2020-2022 BIT Optical Imaging and Computing Lab. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 								</ul>
 							</div>
 
