--- a/cdw_personal.html
+++ b/cdw_personal.html
@@ -53,6 +53,7 @@ a:active {
 								<li><a href="fzx_personal.html">冯泽心老师</a></li>
                                 <li><a href="yt_personal.html">杨通老师</a></li>
                                 <li><a href="cc_personal.html">池骋老师</a></li>
+                                <li><a href="xjh_personal.html">熊江浩老师</a></li>
 							</ul>
                         </li>
 						<li><a href="research.html">研究方向</a></li>
@@ -335,7 +336,7 @@ DOI：10.3969/j.issn.1007-2276.2014.10.025</a></p>
 						<!-- Copyright -->
 							<div id="copyright">
 								<ul class="menu">
-									<li>&copy; 2020-2021 BIT Optical Imaging and Computing Lab. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+									<li>&copy; 2020-2022 BIT Optical Imaging and Computing Lab. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 								</ul>
 							</div>
 
