--- a/cdw_personal.html
+++ b/cdw_personal.html
@@ -259,7 +259,7 @@ DOI：10.3969/j.issn.1007-2276.2014.10.025</a></p>
 
 <p>[17]	Dewen Cheng, Yongtian Wang*, Lu Yu, and Xiaohua Liu. “Optical design and evaluation of a 4 mm cost-effective ultra-high-definition arthroscope,” <strong>Biomedical Optics Express</strong>, 5(8): 2697-2714, 2014.<a href="https://dx.doi.org/10.1364/BOE.5.002697"> DOI: 10.1364/BOE.5.002697</a></p>
 
-<p>[16]	Chen Xu, Dewen Cheng*, Haichao Peng, Weitao Song, Yongtain Wang.  “Wearable optical see-through head-mounted display capable of adjusting virtual image depth,” <strong>Chinese Optics Letters</strong>, 12(12): 43-45, 2014.<a href="https://www.osapublishing.org/col/abstract.cfm?uri=col-12-6-060011"> DOI: 10.3788/COL201412.060011</a></p>
+<p>[16]	Chen Xu, Dewen Cheng*, Haichao Peng, Weitao Song, Yongtian Wang.  “Wearable optical see-through head-mounted display capable of adjusting virtual image depth,” <strong>Chinese Optics Letters</strong>, 12(12): 43-45, 2014.<a href="https://www.osapublishing.org/col/abstract.cfm?uri=col-12-6-060011"> DOI: 10.3788/COL201412.060011</a></p>
 
 <p>[15]	Weitao Song, Yue Liu, Dewen Cheng*, Yongtian Wang. “Light field head-mounted display with correct focus cue using micro structure array,” <strong>Chinese Optics Letters</strong>, 12(6): 39-42, 2014.<a href="https://www.osapublishing.org/col/abstract.cfm?uri=col-12-6-060010">DOI: 10.3788/COL201412.060010</a></p>
 
@@ -286,7 +286,7 @@ DOI：10.3969/j.issn.1007-2276.2014.10.025</a></p>
 
 <p>[5]	Dewen Cheng, Yongtian Wang, Hong Hua*, and Talha M M. “Design of an optical see-through head-mounted display with a low f-number and large field of view using a freeform prism,” <strong>Applied Optics</strong>, 48(14): 2655-2668, 2009.<a href="https://dx.doi.org/10.1364/AO.48.002655"> DOI: 10.1364/AO.48.002655 </a></p>
 
-<p class="class2">[4]	Lu Yu, Dewen Cheng*, Wei Zhou, Yongtain Wang, Xiaohua Liu, Guofan Jin. “Optimization design of rigid endoscope with high definition and large depth of field,” <strong>Acta Optica Sinica</strong>, 33(11): 1122003, 2013.<a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ1310200000202x5A7D"> DOI：10.3788/aos201333.1122003</a></p>
+<p class="class2">[4]	Lu Yu, Dewen Cheng*, Wei Zhou, Yongtian Wang, Xiaohua Liu, Guofan Jin. “Optimization design of rigid endoscope with high definition and large depth of field,” <strong>Acta Optica Sinica</strong>, 33(11): 1122003, 2013.<a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ1310200000202x5A7D"> DOI：10.3788/aos201333.1122003</a></p>
 <p>禹璐,程德文*,周伟,王涌天,刘小华,金国藩.”大景深高清硬性内窥镜光学系统的优化设计”.<strong>光学学报</strong>,2013,33(11):221-229. <a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ1310200000202x5A7D"> DOI：10.3788/aos201333.1122003</a></p>
 
 <p class="class2">[3]	Jiaqiang Yang, Dewen Cheng*, Qingfeng Wang, Yongtian Wang. “Design of a novel wide view-field angle and anti-stray-light fundus camera,” <strong>Acta Optica Sinica</strong>, 32(11): 1122002, 2012.<a href="http://www.opticsjournal.net/Articles/Abstract?aid=OJ120823000097fLiOkR"> DOI：10.3788/aos201232.1122002</a></p>
