--- a/yt_personal.html
+++ b/yt_personal.html
@@ -164,6 +164,7 @@
 <p>[39]	Dewen Cheng*, Qichao Hou, Yang Li, Tian Zhang, Danyang Li, Yilun Huang, Yue Liu, Qiwei Wang, Weihong Hou, Tong Yang, Zexin Feng, and Yongtian Wang*, "Optical design and pupil swim analysis of a compact, large EPD and immersive VR head mounted display," <strong>Optics Express</strong> 30, 6584-6602 (2022).</p>
 <p>[40]	Dongwei Ni, Dewen Cheng*, Yue Liu, Ximeng Wang, Cheng Yao, Tong Yang, Cheng Chi, and Yongtian Wang, "Uniformity improvement of two-dimensional surface relief grating waveguide display using particle swarm optimization," <strong>Optics Express</strong>, 30(14), 24523-24543 (2022).</p>
 <p>[41]	Dewen Cheng, Qiwei Wang, Li Wei*, Ximeng Wang, Lijun Zhou, Qichao Hou, Jiaxi Duan, Tong Yang, and Yongtian Wang, "Design method of a wide-angle AR display with a single-layer two-dimensional pupil expansion geometrical waveguide," <strong>Applied Optics</strong>, 61(19), 5813-5822 (2022).</p>
+<p>[42]	Dewen Cheng, Hailong Chen, Cheng Yao*, Qichao Hou, Weihong Hou, Li Wei, Tong Yang, and Yongtian Wang, "Design, stray light analysis, and fabrication of a compact head-mounted display using freeform prisms," Optics Express 30(20), 36931-36948 (2022).</p>
 
 
 
