--- a/fzx_personal.html
+++ b/fzx_personal.html
@@ -71,7 +71,7 @@
                                                 <div class="col-9">
 
 <h2 align="left">冯泽心</h2>
-<h3 align="left">博士 特别研究员 博士生导师</h3>
+<h3 align="left">博士 长聘副教授/特别研究员 博士生导师</h3>
 <h3 align="left">Email：fzx@bit.edu.cn</h3>
 <p>&nbsp;</p>
 <h3>个人简介</h3>
