--- a/news.html
+++ b/news.html
@@ -60,8 +60,11 @@
 								<!-- Features -->
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
+
+<p>[2022-11-23] 我们有关pancake型VR头显杂光分析与抑制的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
+<p>[2022-10-26] 我们有关不同浓度液体分子扩散活化能快速测量的论文在线发表于<strong>AIP Advances</strong>。</p>
 <p>[2022-09-22] 我们有关基于自由曲面棱镜的紧凑型头显的设计、杂光分析与制造的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
-<p>[2022-09-06] 我们有关液体扩散系数光学测量的论文在线发表于<strong>Optik</strong>。</p>
+<p>[2022-09-06] 我们有关不同浓度液体扩散系数快速光学测量的论文在线发表于<strong>Optik</strong>。</p>
 <p>[2022-08-08] 欢迎吕鑫、单跃凡、孙佳平、高丽娜、蓝天翔、刘晋纲、刘永琦、潘兴华、王业晟、张源哲、周昀琦11位同学加入实验室团队！</p>      
 <p>[2022-07-02] 我们有关AR头戴显示器设计与制造的综述论文入选<strong>Light: Advanced Manufacturing期刊2021年度优秀论文</strong>（共10篇论文入选）。<a href="https://www.light-am.com/article/doi/10.37188/lam.2021.024">论文链接</a></p>  
 <p>[2022-06-29] 我们有关大视场二维扩瞳几何阵列波导AR系统设计方法的论文在线发表于<strong>Applied Optics</strong>。</p>
