--- a/cdw_personal.html
+++ b/cdw_personal.html
@@ -120,6 +120,15 @@ Optics Letter, Optics Express, Applied optics 特邀审稿人</p>
 <h3>代表性学术成果</h3>
 <p></p>
 
+
+<p>[79]	Qichao Hou, Dewen Cheng*, Yang Li, Tian Zhang, DanYang Li, Yilun Huang, Hailong Chen, Qiwei Wang, Weihong Hou, Tong Yang, and Yongtian Wang, "Stray light analysis and suppression method of a pancake virtual reality head-mounted display," <strong>Optics Express</strong> 30(25), 44918-44932 (2022).<a href="https://doi.org/10.1364/OE.476078"> DOI: 10.1364/OE.476078</a></p>
+
+<p>[78]	Li Wei, Xiaoyun Pu, Dewen Cheng*, and Yongtian Wang  "Measurement of the concentration-and temperature-dependent diffusion coefficient and activation energy via diffusion image analysis," <strong>AIP Advances</strong> 12, 105013 (2022).<a href="https://doi.org/10.1063/5.0084825"> DOI: 10.1063/5.0084825</a></p>
+
+<p>[77]	Dewen Cheng, Hailong Chen, Cheng Yao*, Qichao Hou, Weihong Hou, Li Wei, Tong Yang, and Yongtian Wang, "Design, stray light analysis, and fabrication of a compact head-mounted display using freeform prisms," <strong>Optics Express</strong> 30(20), 36931-36948 (2022).<a href="https://doi.org/10.1364/OE.472175"> DOI: 10.1364/OE.472175</a></p>
+
+<p>[76]	Li Wei, Xiaoyun Pu, and Dewen Cheng*, "Optical measurement of concentration-dependent diffusion coefficient by tracing diffusion image width," <strong>Optik</strong> 270, 169918 (2022).<a href="https://doi.org/10.1016/j.ijleo.2022.169918"> DOI: 10.1016/j.ijleo.2022.169918</a></p>
+
 <p>[75]	Dewen Cheng, Qiwei Wang, Li Wei*, Ximeng Wang, Lijun Zhou, Qichao Hou, Jiaxi Duan, Tong Yang, and Yongtian Wang, "Design method of a wide-angle AR display with a single-layer two-dimensional pupil expansion geometrical waveguide," <strong>Applied Optics</strong>, 61(19), 5813-5822 (2022).<a href="https://doi.org/10.1364/AO.459644"> DOI: 10.1364/AO.459644</a></p>
 
 <p>[74]	Dongwei Ni, Dewen Cheng*, Yue Liu, Ximeng Wang, Cheng Yao, Tong Yang, Cheng Chi, and Yongtian Wang, "Uniformity improvement of two-dimensional surface relief grating waveguide display using particle swarm optimization," <strong>Optics Express</strong>, 30(14), 24523-24543 (2022).<a href="https://doi.org/10.1364/OE.462384"> DOI: 10.1364/OE.462384</a></p>
