--- a/yt_personal.html
+++ b/yt_personal.html
@@ -75,7 +75,7 @@
 <h3 align="left">Email：yangtong@bit.edu.cn</h3>
 <p>&nbsp;</p>
 <h3>个人简介</h3>
-<p>杨通，男，博士，北京理工大学光电学院长聘副教授/特别研究员、博士生导师。长期在应用光学、光学设计领域从事教学和科研工作，主要研究方向包括光学设计、自由曲面光学、光学成像、衍射与微纳光学等方面。主持国家重点研发计划子课题、国家自然科学基金面上项目与青年项目、北京市自然科学基金面上项目、和企业/研究所合作的技术开发等多项纵向与横向项目。发表论文50篇，其中以第一或者通讯作者在Light: Science & Applications（Nature旗下期刊，2021年影响因子20.257）、Optics Express等SCI期刊发表论文20余篇。已获得授权发明专利40项，包括美国专利16项。入选中国科协青年人才托举计划项目，曾获得金国藩青年学子奖（奖励高校教师）、第四届全国光学工程学科优秀博士学位论文等奖励。指导的研究生多次获得校级优秀学位论文、市级或校级优秀毕业生、国家奖学金等荣誉称号，或者在光学设计竞赛中获奖。</p>
+<p>杨通，男，博士，北京理工大学光电学院长聘副教授/特别研究员、博士生导师。长期在应用光学、光学设计领域从事教学和科研工作，主要研究方向包括光学设计、自由曲面光学、光学成像、衍射与微纳光学等方面。主持国家重点研发计划子课题、国家自然科学基金面上项目与青年项目、北京市自然科学基金面上项目、和企业/研究所合作的技术开发等多项纵向与横向项目。发表论文50篇，其中以第一或者通讯作者在Light: Science & Applications（Nature旗下期刊，2021年影响因子20.257）、Optics Express等SCI期刊发表录用论文25篇。已获得授权发明专利40项，包括美国专利16项。入选中国科协青年人才托举计划项目，曾获得金国藩青年学子奖（奖励高校教师）、第四届全国光学工程学科优秀博士学位论文等奖励。指导的研究生多次获得校级优秀学位论文、市级或校级优秀毕业生、国家奖学金等荣誉称号，或者在光学设计竞赛中获奖。</p>
 <h3>教育经历</h3>
 <p>2012.08-2017.07，清华大学，光学工程专业，博士</p>
 <p>2008.09-2012.06，天津大学，（光电）信息工程专业，学士</p>
@@ -165,7 +165,8 @@
 <p>[39]	Dewen Cheng*, Qichao Hou, Yang Li, Tian Zhang, Danyang Li, Yilun Huang, Yue Liu, Qiwei Wang, Weihong Hou, Tong Yang, Zexin Feng, and Yongtian Wang*, "Optical design and pupil swim analysis of a compact, large EPD and immersive VR head mounted display," <strong>Optics Express</strong> 30, 6584-6602 (2022).</p>
 <p>[40]	Dongwei Ni, Dewen Cheng*, Yue Liu, Ximeng Wang, Cheng Yao, Tong Yang, Cheng Chi, and Yongtian Wang, "Uniformity improvement of two-dimensional surface relief grating waveguide display using particle swarm optimization," <strong>Optics Express</strong>, 30(14), 24523-24543 (2022).</p>
 <p>[41]	Dewen Cheng, Qiwei Wang, Li Wei*, Ximeng Wang, Lijun Zhou, Qichao Hou, Jiaxi Duan, Tong Yang, and Yongtian Wang, "Design method of a wide-angle AR display with a single-layer two-dimensional pupil expansion geometrical waveguide," <strong>Applied Optics</strong>, 61(19), 5813-5822 (2022).</p>
-<p>[42]	Dewen Cheng, Hailong Chen, Cheng Yao*, Qichao Hou, Weihong Hou, Li Wei, Tong Yang, and Yongtian Wang, "Design, stray light analysis, and fabrication of a compact head-mounted display using freeform prisms," Optics Express 30(20), 36931-36948 (2022).</p>
+<p>[42]	Dewen Cheng, Hailong Chen, Cheng Yao*, Qichao Hou, Weihong Hou, Li Wei, Tong Yang, and Yongtian Wang, "Design, stray light analysis, and fabrication of a compact head-mounted display using freeform prisms," <strong>Optics Express</strong> 30(20), 36931-36948 (2022).</p>
+<p>[43]	Qichao Hou, Dewen Cheng*, Yang Li, Tian Zhang, DanYang Li, Yilun Huang, Hailong Chen, Qiwei Wang, Weihong Hou, Tong Yang, and Yongtian Wang, "Stray light analysis and suppression method of a pancake virtual reality head-mounted display," <strong>Optics Express</strong> 30(25), 44918-44932 (2022).</p>
 
 
 
