--- a/cdw_personal.html
+++ b/cdw_personal.html
@@ -120,6 +120,7 @@ Optics Letter, Optics Express, Applied optics 特邀审稿人</p>
 <h3>代表性学术成果</h3>
 <p></p>
 
+<p>[80]	Tong Yang, Lina Gao, Dewen Cheng*, and Yongtian Wang, "Design method of imaging optical systems using confocal flat phase elements," <strong>Optics Express</strong> 30(25), 45895-45909 (2022).<a href="https://doi.org/10.1364/OE.478523"> DOI: 10.1364/OE.478523</a></p>
 
 <p>[79]	Qichao Hou, Dewen Cheng*, Yang Li, Tian Zhang, DanYang Li, Yilun Huang, Hailong Chen, Qiwei Wang, Weihong Hou, Tong Yang, and Yongtian Wang, "Stray light analysis and suppression method of a pancake virtual reality head-mounted display," <strong>Optics Express</strong> 30(25), 44918-44932 (2022).<a href="https://doi.org/10.1364/OE.476078"> DOI: 10.1364/OE.476078</a></p>
 
