--- a/publications.html
+++ b/publications.html
@@ -102,6 +102,8 @@ a:active {
 
 <h3>2022年</h3>
 
+<p>[81]	Dewen Cheng*, Hailong Chen, Wenrui Shen, Tong Yang*, Yue Liu, and Yongtian Wang, "Optical description and design method of smoothly stitched polynomial freeform surfaces," <strong>Optics and Lasers in Engineering</strong> 162, 107349 (2023).<a href="https://doi.org/10.1016/j.optlaseng.2022.107349"> DOI: 10.1016/j.optlaseng.2022.107349</a></p>
+
 <p>[80]	Tong Yang, Lina Gao, Dewen Cheng*, and Yongtian Wang, "Design method of imaging optical systems using confocal flat phase elements," <strong>Optics Express</strong> 30(25), 45895-45909 (2022).<a href="https://doi.org/10.1364/OE.478523"> DOI: 10.1364/OE.478523</a></p>
 
 <p>[79]	Qichao Hou, Dewen Cheng*, Yang Li, Tian Zhang, Danyang Li, Yilun Huang, Hailong Chen, Qiwei Wang, Weihong Hou, Tong Yang, and Yongtian Wang, "Stray light analysis and suppression method of a pancake virtual reality head-mounted display," <strong>Optics Express</strong> 30(25), 44918-44932 (2022).<a href="https://doi.org/10.1364/OE.476078"> DOI: 10.1364/OE.476078</a></p>
