--- a/news.html
+++ b/news.html
@@ -61,7 +61,7 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
 
-<p>[2022-12-05] 我们有关光顺拼接多项式自由曲面描述与应用的论文发表于<strong>Optics and Lasers in Engineering</strong>。</p>
+<p>[2022-12-05] 我们有关光顺拼接多项式自由曲面描述与应用的论文在线发表于<strong>Optics and Lasers in Engineering</strong>。</p>
 <p>[2022-12-02] 我们有关基于共焦相位元件的成像系统设计的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
 <p>[2022-11-23] 我们有关pancake型VR头显杂光分析与抑制的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
 <p>[2022-10-26] 我们有关不同浓度液体分子扩散活化能快速测量的论文在线发表于<strong>AIP Advances</strong>。</p>
