--- a/yt_personal.html
+++ b/yt_personal.html
@@ -45,7 +45,6 @@
                         <li><a href="facility.html">实验条件</a></li>                         
                         <li><a href="teaching.html">教学工作</a></li>
                         <li><a href="contact.html">联系我们</a></li>
-                        
 					</ul>
 		  </nav>
 
@@ -90,7 +89,7 @@
 <p>自由曲面光学、光学设计、光学与计算成像、衍射与微纳光学、增强现实、机器学习</p>
 
 <h3>主讲课程</h3>
-<p>主讲本科生课程《复变函数与数理方程》、研究生课程《光学自由曲面技术》</p>
+<p>主讲本科生课程《光学系统设计与工艺》与《复变函数与数理方程》、研究生课程《光学自由曲面技术》</p>
 
 <h3>学术兼职</h3>
 <p>OSA、SPIE、EOS会员。Optics Express、Applied Optics、Journal of the Optical Society of America A、Journal of Physics: Photonics、Chinese Optics Letters等10余个国际期刊审稿人。</p>
