--- a/cdw_personal.html
+++ b/cdw_personal.html
@@ -120,6 +120,8 @@ Optics Letter, Optics Express, Applied optics 特邀审稿人</p>
 <h3>代表性学术成果</h3>
 <p></p>
 
+<p>[82]	Yongdong Wang, Tong Yang*, Dongwei Ni, Dewen Cheng, and Yongtian Wang, "Design of an off-axis near-eye AR display system based on a full-color freeform holographic optical element," <strong>Optics Letters</strong> 48(5), 1288-1291 (2023).<a href="https://doi.org/10.1364/OL.484763"> DOI: 10.1364/OL.484763</a></p>
+
 <p>[81]	Dewen Cheng*, Hailong Chen, Wenrui Shen, Tong Yang*, Yue Liu, and Yongtian Wang, "Optical description and design method of smoothly stitched polynomial freeform surfaces," <strong>Optics and Lasers in Engineering</strong> 162, 107349 (2023).<a href="https://doi.org/10.1016/j.optlaseng.2022.107349"> DOI: 10.1016/j.optlaseng.2022.107349</a></p>
 
 <p>[80]	Tong Yang, Lina Gao, Dewen Cheng*, and Yongtian Wang, "Design method of imaging optical systems using confocal flat phase elements," <strong>Optics Express</strong> 30(25), 45895-45909 (2022).<a href="https://doi.org/10.1364/OE.478523"> DOI: 10.1364/OE.478523</a></p>
