--- a/publications.html
+++ b/publications.html
@@ -99,6 +99,9 @@ a:active {
 									<section class="box features">
 										<h2 class="major"><span>期刊论文</span></h2>
 
+<h3>2023年</h3>
+
+<p>[82]	Yongdong Wang, Tong Yang*, Dongwei Ni, Dewen Cheng, and Yongtian Wang, "Design of an off-axis near-eye AR display system based on a full-color freeform holographic optical element," <strong>Optics Letters</strong> 48(5), 1288-1291 (2023).<a href="https://doi.org/10.1364/OL.484763"> DOI: 10.1364/OL.484763</a></p>
 
 <h3>2022年</h3>
 
