--- a/publications.html
+++ b/publications.html
@@ -101,6 +101,8 @@ a:active {
 
 <h3>2023年</h3>
 
+<p>[83]	Dongwei Ni, Dewen Cheng*, Yongdong Wang, Tong Yang*, Ximeng Wang, Cheng Chi, and Yongtian Wang, "Design and fabrication method of holographic waveguide near-eye display with 2D eye box expansion," <strong>Optics Express</strong> 31(7), 11019-11040 (2023).<a href="https://doi.org/10.1364/OE.481889"> DOI: 10.1364/OE.481889</a></p>
+
 <p>[82]	Yongdong Wang, Tong Yang*, Dongwei Ni, Dewen Cheng, and Yongtian Wang, "Design of an off-axis near-eye AR display system based on a full-color freeform holographic optical element," <strong>Optics Letters</strong> 48(5), 1288-1291 (2023).<a href="https://doi.org/10.1364/OL.484763"> DOI: 10.1364/OL.484763</a></p>
 
 <h3>2022年</h3>
