--- a/cdw_personal.html
+++ b/cdw_personal.html
@@ -120,6 +120,8 @@ Optics Letter, Optics Express, Applied optics 特邀审稿人</p>
 <h3>代表性学术成果</h3>
 <p></p>
 
+<p>[83]	Dongwei Ni, Dewen Cheng*, Yongdong Wang, Tong Yang*, Ximeng Wang, Cheng Chi, and Yongtian Wang, "Design and fabrication method of holographic waveguide near-eye display with 2D eye box expansion," <strong>Optics Express</strong> 31(7), 11019-11040 (2023).<a href="https://doi.org/10.1364/OE.481889"> DOI: 10.1364/OE.481889</a></p>
+
 <p>[82]	Yongdong Wang, Tong Yang*, Dongwei Ni, Dewen Cheng, and Yongtian Wang, "Design of an off-axis near-eye AR display system based on a full-color freeform holographic optical element," <strong>Optics Letters</strong> 48(5), 1288-1291 (2023).<a href="https://doi.org/10.1364/OL.484763"> DOI: 10.1364/OL.484763</a></p>
 
 <p>[81]	Dewen Cheng*, Hailong Chen, Wenrui Shen, Tong Yang*, Yue Liu, and Yongtian Wang, "Optical description and design method of smoothly stitched polynomial freeform surfaces," <strong>Optics and Lasers in Engineering</strong> 162, 107349 (2023).<a href="https://doi.org/10.1016/j.optlaseng.2022.107349"> DOI: 10.1016/j.optlaseng.2022.107349</a></p>
