--- a/cdw_personal.html
+++ b/cdw_personal.html
@@ -120,6 +120,13 @@ Optics Letter, Optics Express, Applied optics 特邀审稿人</p>
 <h3>代表性学术成果</h3>
 <p></p>
 
+
+<p class="class2">[85]	程德文*, 陈海龙, 王涌天, 杨通. “实现给定能量比离散光斑阵列的自由曲面分束器,” <strong>光学学报</strong>, 43(8): 0822008, 2023.<a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ6a18a8aaaad8f934">DOI: 10.3788/AOS221980</a><strong> (封底文章、特邀综述)</strong></p>
+<p>Dewen Cheng*, Hailong Chen, Yongtian Wang, Tong Yang. “Mathematical description and design methods of complex optical surfaces,” <strong>Acta Optica Sinica</strong>, 43(8): 0822008, 2023. <a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ6a18a8aaaad8f934">DOI: 10.3788/AOS221980</a><strong> (Back cover paper, Invited Review)</strong></p>
+
+<p class="class2">[84]	周丽军, 杨通*, 高丽娜, 程德文, 王涌天. “易于多面共体加工的自由曲面离轴三反系统设计,” <strong>光学学报</strong>, 43(8): 0822021, 2023.<a href="https://www.opticsjournal.net/Articles/OJd9973be8bacdd22f/Abstract">DOI: 10.3788/AOS221895</a></p>
+<p>Lijun Zhou, Tong Yang*, Lina Gao, Dewen Cheng, Yongtian Wang. “Design of freeform off-axis three-mirror system enabling multisurface-integrated fabrication,” <strong>Acta Optica Sinica</strong>, 43(8): 0822021, 2023. <a href="https://www.opticsjournal.net/Articles/OJd9973be8bacdd22f/Abstract">DOI: 10.3788/AOS221895</a></p>
+
 <p>[83]	Dongwei Ni, Dewen Cheng*, Yongdong Wang, Tong Yang*, Ximeng Wang, Cheng Chi, and Yongtian Wang, "Design and fabrication method of holographic waveguide near-eye display with 2D eye box expansion," <strong>Optics Express</strong> 31(7), 11019-11040 (2023).<a href="https://doi.org/10.1364/OE.481889"> DOI: 10.1364/OE.481889</a></p>
 
 <p>[82]	Yongdong Wang, Tong Yang*, Dongwei Ni, Dewen Cheng, and Yongtian Wang, "Design of an off-axis near-eye AR display system based on a full-color freeform holographic optical element," <strong>Optics Letters</strong> 48(5), 1288-1291 (2023).<a href="https://doi.org/10.1364/OL.484763"> DOI: 10.1364/OL.484763</a></p>
