--- a/yt_personal.html
+++ b/yt_personal.html
@@ -177,7 +177,7 @@
 <p>[46]	Dewen Cheng, Qiwei Wang, Li Wei*, Ximeng Wang, Lijun Zhou, Qichao Hou, Jiaxi Duan, Tong Yang, and Yongtian Wang, "Design method of a wide-angle AR display with a single-layer two-dimensional pupil expansion geometrical waveguide," <strong>Applied Optics</strong>, 61(19), 5813-5822 (2022).</p>
 <p>[47]	Dewen Cheng, Hailong Chen, Cheng Yao*, Qichao Hou, Weihong Hou, Li Wei, Tong Yang, and Yongtian Wang, "Design, stray light analysis, and fabrication of a compact head-mounted display using freeform prisms," <strong>Optics Express</strong> 30(20), 36931-36948 (2022).</p>
 <p>[48]	Qichao Hou, Dewen Cheng*, Yang Li, Tian Zhang, DanYang Li, Yilun Huang, Hailong Chen, Qiwei Wang, Weihong Hou, Tong Yang, and Yongtian Wang, "Stray light analysis and suppression method of a pancake virtual reality head-mounted display," <strong>Optics Express</strong> 30(25), 44918-44932 (2022).</p>
-<p class="class2">[49]	程德文*, 陈海龙, 王涌天, 杨通. “实现给定能量比离散光斑阵列的自由曲面分束器,” <strong>光学学报</strong>, 43(8): 0822008, 2023.<strong> (封底文章、特邀综述)</strong></p>
+<p class="class2">[49]	程德文*, 陈海龙, 王涌天, 杨通. “复杂光学曲面数理描述和设计方法研究,” <strong>光学学报</strong>, 43(8): 0822008, 2023.<strong> (封底文章、特邀综述)</strong></p>
 <p>Dewen Cheng*, Hailong Chen, Yongtian Wang, Tong Yang. “Mathematical description and design methods of complex optical surfaces,” <strong>Acta Optica Sinica</strong>, 43(8): 0822008, 2023.<strong> (Back cover paper, Invited Review)</strong></p>
 
 
