--- a/fzx_personal.html
+++ b/fzx_personal.html
@@ -100,6 +100,7 @@
 <h3>代表性学术成果</h3>
 <p></p>
 
+<p>[29]	Haisong Tang, Zexin Feng*, Dewen Cheng, and Yongtian Wang, "Parallel ray tracing through freeform lenses with NURBS surfaces," <strong>Chinese Optics Letters</strong> 21(5), 052201 (2023).</p>
 
 <p>[28]	Jia Si, Zexin Feng*, Dewen Cheng, and Yongtian Wang, "Freeform beam splitting system design for generating an array of identical sub-beams," <strong>Optics Express</strong> 29, 29918-29935 (2021).</p>
 
