--- a/cdw_personal.html
+++ b/cdw_personal.html
@@ -120,28 +120,28 @@ Optics Letter, Optics Express, Applied optics 特邀审稿人</p>
 <h3>代表性学术成果</h3>
 <p></p>
 
-
+<p>[86]	Haisong Tang, Zexin Feng*, Dewen Cheng, and Yongtian Wang, "Parallel ray tracing through freeform lenses with NURBS surfaces," <strong>Chinese Optics Letters</strong>, 21(5), 052201 (2023).<a href="https://doi.org/10.3788/COL202321.052201"> DOI:  10.3788/COL202321.052201</a></p>
 <p class="class2">[85]	程德文*, 陈海龙, 王涌天, 杨通. “复杂光学曲面数理描述和设计方法研究,” <strong>光学学报</strong>, 43(8): 0822008, 2023.<a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ6a18a8aaaad8f934">DOI: 10.3788/AOS221980</a><strong> (封底文章、特邀综述)</strong></p>
 <p>Dewen Cheng*, Hailong Chen, Yongtian Wang, Tong Yang. “Mathematical description and design methods of complex optical surfaces,” <strong>Acta Optica Sinica</strong>, 43(8): 0822008, 2023. <a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ6a18a8aaaad8f934">DOI: 10.3788/AOS221980</a><strong> (Back cover paper, Invited Review)</strong></p>
 
 <p class="class2">[84]	周丽军, 杨通*, 高丽娜, 程德文, 王涌天. “易于多面共体加工的自由曲面离轴三反系统设计,” <strong>光学学报</strong>, 43(8): 0822021, 2023.<a href="https://www.opticsjournal.net/Articles/OJd9973be8bacdd22f/Abstract">DOI: 10.3788/AOS221895</a></p>
 <p>Lijun Zhou, Tong Yang*, Lina Gao, Dewen Cheng, Yongtian Wang. “Design of freeform off-axis three-mirror system enabling multisurface-integrated fabrication,” <strong>Acta Optica Sinica</strong>, 43(8): 0822021, 2023. <a href="https://www.opticsjournal.net/Articles/OJd9973be8bacdd22f/Abstract">DOI: 10.3788/AOS221895</a></p>
 
-<p>[83]	Dongwei Ni, Dewen Cheng*, Yongdong Wang, Tong Yang*, Ximeng Wang, Cheng Chi, and Yongtian Wang, "Design and fabrication method of holographic waveguide near-eye display with 2D eye box expansion," <strong>Optics Express</strong> 31(7), 11019-11040 (2023).<a href="https://doi.org/10.1364/OE.481889"> DOI: 10.1364/OE.481889</a></p>
+<p>[83]	Dongwei Ni, Dewen Cheng*, Yongdong Wang, Tong Yang*, Ximeng Wang, Cheng Chi, and Yongtian Wang, "Design and fabrication method of holographic waveguide near-eye display with 2D eye box expansion," <strong>Optics Express</strong>, 31(7), 11019-11040 (2023).<a href="https://doi.org/10.1364/OE.481889"> DOI: 10.1364/OE.481889</a></p>
 
-<p>[82]	Yongdong Wang, Tong Yang*, Dongwei Ni, Dewen Cheng, and Yongtian Wang, "Design of an off-axis near-eye AR display system based on a full-color freeform holographic optical element," <strong>Optics Letters</strong> 48(5), 1288-1291 (2023).<a href="https://doi.org/10.1364/OL.484763"> DOI: 10.1364/OL.484763</a></p>
+<p>[82]	Yongdong Wang, Tong Yang*, Dongwei Ni, Dewen Cheng, and Yongtian Wang, "Design of an off-axis near-eye AR display system based on a full-color freeform holographic optical element," <strong>Optics Letters</strong>, 48(5), 1288-1291 (2023).<a href="https://doi.org/10.1364/OL.484763"> DOI: 10.1364/OL.484763</a></p>
 
-<p>[81]	Dewen Cheng*, Hailong Chen, Wenrui Shen, Tong Yang*, Yue Liu, and Yongtian Wang, "Optical description and design method of smoothly stitched polynomial freeform surfaces," <strong>Optics and Lasers in Engineering</strong> 162, 107349 (2023).<a href="https://doi.org/10.1016/j.optlaseng.2022.107349"> DOI: 10.1016/j.optlaseng.2022.107349</a></p>
+<p>[81]	Dewen Cheng*, Hailong Chen, Wenrui Shen, Tong Yang*, Yue Liu, and Yongtian Wang, "Optical description and design method of smoothly stitched polynomial freeform surfaces," <strong>Optics and Lasers in Engineering</strong>, 162, 107349 (2023).<a href="https://doi.org/10.1016/j.optlaseng.2022.107349"> DOI: 10.1016/j.optlaseng.2022.107349</a></p>
 
-<p>[80]	Tong Yang, Lina Gao, Dewen Cheng*, and Yongtian Wang, "Design method of imaging optical systems using confocal flat phase elements," <strong>Optics Express</strong> 30(25), 45895-45909 (2022).<a href="https://doi.org/10.1364/OE.478523"> DOI: 10.1364/OE.478523</a></p>
+<p>[80]	Tong Yang, Lina Gao, Dewen Cheng*, and Yongtian Wang, "Design method of imaging optical systems using confocal flat phase elements," <strong>Optics Express</strong>, 30(25), 45895-45909 (2022).<a href="https://doi.org/10.1364/OE.478523"> DOI: 10.1364/OE.478523</a></p>
 
-<p>[79]	Qichao Hou, Dewen Cheng*, Yang Li, Tian Zhang, DanYang Li, Yilun Huang, Hailong Chen, Qiwei Wang, Weihong Hou, Tong Yang, and Yongtian Wang, "Stray light analysis and suppression method of a pancake virtual reality head-mounted display," <strong>Optics Express</strong> 30(25), 44918-44932 (2022).<a href="https://doi.org/10.1364/OE.476078"> DOI: 10.1364/OE.476078</a></p>
+<p>[79]	Qichao Hou, Dewen Cheng*, Yang Li, Tian Zhang, DanYang Li, Yilun Huang, Hailong Chen, Qiwei Wang, Weihong Hou, Tong Yang, and Yongtian Wang, "Stray light analysis and suppression method of a pancake virtual reality head-mounted display," <strong>Optics Express</strong>, 30(25), 44918-44932 (2022).<a href="https://doi.org/10.1364/OE.476078"> DOI: 10.1364/OE.476078</a></p>
 
-<p>[78]	Li Wei, Xiaoyun Pu, Dewen Cheng*, and Yongtian Wang  "Measurement of the concentration-and temperature-dependent diffusion coefficient and activation energy via diffusion image analysis," <strong>AIP Advances</strong> 12, 105013 (2022).<a href="https://doi.org/10.1063/5.0084825"> DOI: 10.1063/5.0084825</a></p>
+<p>[78]	Li Wei, Xiaoyun Pu, Dewen Cheng*, and Yongtian Wang  "Measurement of the concentration-and temperature-dependent diffusion coefficient and activation energy via diffusion image analysis," <strong>AIP Advances</strong>, 12, 105013 (2022).<a href="https://doi.org/10.1063/5.0084825"> DOI: 10.1063/5.0084825</a></p>
 
-<p>[77]	Dewen Cheng, Hailong Chen, Cheng Yao*, Qichao Hou, Weihong Hou, Li Wei, Tong Yang, and Yongtian Wang, "Design, stray light analysis, and fabrication of a compact head-mounted display using freeform prisms," <strong>Optics Express</strong> 30(20), 36931-36948 (2022).<a href="https://doi.org/10.1364/OE.472175"> DOI: 10.1364/OE.472175</a></p>
+<p>[77]	Dewen Cheng, Hailong Chen, Cheng Yao*, Qichao Hou, Weihong Hou, Li Wei, Tong Yang, and Yongtian Wang, "Design, stray light analysis, and fabrication of a compact head-mounted display using freeform prisms," <strong>Optics Express</strong>, 30(20), 36931-36948 (2022).<a href="https://doi.org/10.1364/OE.472175"> DOI: 10.1364/OE.472175</a></p>
 
-<p>[76]	Li Wei, Xiaoyun Pu, and Dewen Cheng*, "Optical measurement of concentration-dependent diffusion coefficient by tracing diffusion image width," <strong>Optik</strong> 270, 169918 (2022).<a href="https://doi.org/10.1016/j.ijleo.2022.169918"> DOI: 10.1016/j.ijleo.2022.169918</a></p>
+<p>[76]	Li Wei, Xiaoyun Pu, and Dewen Cheng*, "Optical measurement of concentration-dependent diffusion coefficient by tracing diffusion image width," <strong>Optik</strong>, 270, 169918 (2022).<a href="https://doi.org/10.1016/j.ijleo.2022.169918"> DOI: 10.1016/j.ijleo.2022.169918</a></p>
 
 <p>[75]	Dewen Cheng, Qiwei Wang, Li Wei*, Ximeng Wang, Lijun Zhou, Qichao Hou, Jiaxi Duan, Tong Yang, and Yongtian Wang, "Design method of a wide-angle AR display with a single-layer two-dimensional pupil expansion geometrical waveguide," <strong>Applied Optics</strong>, 61(19), 5813-5822 (2022).<a href="https://doi.org/10.1364/AO.459644"> DOI: 10.1364/AO.459644</a></p>
 
