--- a/news.html
+++ b/news.html
@@ -61,7 +61,12 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
 
-<p>[2023-04-06] 我们有关复杂光学曲面数理描述和设计方法研究的<strong>特邀综述论文</strong>在线发表于<strong>光学学报</strong>，并被选为<strong>封底文章</strong></p>
+<p>[2023-05-20] 恭喜魏利博士顺利通博士后出站答辩，并即将前往上海理工大学任教。</p>
+<div class="row"><div class="col-6"><section class="box feature">
+<a class="image featured"><img src="images/wlpostdoc.png" alt="" /></a>
+</section></div></div>
+<p>[2023-05-04] 我们有关基于NURBS自由曲面的并行光线追迹的论文在线发表于<strong>Chinese Optics Letters</strong>。</p>
+<p>[2023-04-06] 我们有关复杂光学曲面数理描述和设计方法研究的<strong>特邀综述论文</strong>在线发表于<strong>光学学报</strong>，并被选为<strong>封底文章</strong>。<a href="https://mp.weixin.qq.com/s/VMDZm1E4fzqKbq30SZBTYQ">媒体宣传报道</a></p>  </p>
 <p>[2023-04-06] 我们有关易于多面共体加工的自由曲面离轴三反系统设计的论文在线发表于<strong>光学学报</strong>。</p>
 <p>[2023-03-18] 我们有关二维扩瞳体全息波导AR系统设计与研制的论文在线发表于<strong>Optics Express</strong>。</p>
 <p>[2023-02-28] 我们有关基于自由波面调控全息元件的全彩近眼AR显示系统设计与研制的论文在线发表于<strong>Optics Letters</strong>。</p>
