--- a/news.html
+++ b/news.html
@@ -61,7 +61,7 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
 
-<p>[2023-05-20] 恭喜魏利博士顺利通博士后出站答辩，并即将前往上海理工大学任教。</p>
+<p>[2023-05-20] 恭喜魏利博士顺利通过博士后出站答辩，并即将前往上海理工大学任教。</p>
 <div class="row"><div class="col-6"><section class="box feature">
 <a class="image featured"><img src="images/wlpostdoc.png" alt="" /></a>
 </section></div></div>
