--- a/cdw_personal.html
+++ b/cdw_personal.html
@@ -120,6 +120,7 @@ Optics Letter, Optics Express, Applied optics 特邀审稿人</p>
 <h3>代表性学术成果</h3>
 <p></p>
 
+<p>[87]	Tong Yang, Huiming Xu, Dewen Cheng*, and Yongtian Wang, "Design of compact off-axis freeform imaging systems based on optical-digital joint optimization," <strong>Optics Express</strong>, 31(12), 19491-19509 (2023).<a href="https://doi.org/10.1364/OE.492199"> DOI: 10.1364/OE.492199</a></p>
 <p>[86]	Haisong Tang, Zexin Feng*, Dewen Cheng, and Yongtian Wang, "Parallel ray tracing through freeform lenses with NURBS surfaces," <strong>Chinese Optics Letters</strong>, 21(5), 052201 (2023).<a href="https://doi.org/10.3788/COL202321.052201"> DOI:  10.3788/COL202321.052201</a></p>
 <p class="class2">[85]	程德文*, 陈海龙, 王涌天, 杨通. “复杂光学曲面数理描述和设计方法研究,” <strong>光学学报</strong>, 43(8): 0822008, 2023.<a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ6a18a8aaaad8f934">DOI: 10.3788/AOS221980</a><strong> (封底文章、特邀综述)</strong></p>
 <p>Dewen Cheng*, Hailong Chen, Yongtian Wang, Tong Yang. “Mathematical description and design methods of complex optical surfaces,” <strong>Acta Optica Sinica</strong>, 43(8): 0822008, 2023. <a href="http://www.opticsjournal.net/Articles/abstract?aid=OJ6a18a8aaaad8f934">DOI: 10.3788/AOS221980</a><strong> (Back cover paper, Invited Review)</strong></p>
@@ -359,7 +360,7 @@ DOI：10.3969/j.issn.1007-2276.2014.10.025</a></p>
 						<!-- Copyright -->
 							<div id="copyright">
 								<ul class="menu">
-									<li>&copy; 2020-2022 BIT Optical Imaging and Computing Lab. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+									<li>&copy; 2020-2023 BIT Optical Imaging and Computing Lab. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 								</ul>
 							</div>
 
