--- a/news.html
+++ b/news.html
@@ -61,6 +61,7 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
 
+<p>[2023-05-26] 我们有关基于光学-数字联合优化设计紧凑型自由曲面成像系统的论文在线发表于<strong>Optics Express</strong>。</p>
 <p>[2023-05-20] 恭喜魏利博士顺利通过博士后出站答辩，并即将前往上海理工大学任教。</p>
 <div class="row"><div class="col-6"><section class="box feature">
 <a class="image featured"><img src="images/wlpostdoc.png" alt="" /></a>
@@ -487,7 +488,7 @@
 						<!-- Copyright -->
 							<div id="copyright">
 								<ul class="menu">
-									<li>&copy; 2020-2022 BIT Optical Imaging and Computing Lab. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+									<li>&copy; 2020-2023 BIT Optical Imaging and Computing Lab. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 								</ul>
 							</div>
 
