--- a/news.html
+++ b/news.html
@@ -61,6 +61,9 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
 
+<p>[2023-06-21] 实验室2023届研究生毕业。感谢侯起超、陈海龙、倪栋伟、李丹阳、张甜、肖钰皓、马骁、周丽军、王永东9位同学为实验室作出的贡献，祝大家前程似锦！</p>
+<p>[2023-06-21] 祝贺王永东同学的硕士学位论文被评为<strong>北京理工大学优秀硕士学位论文（校优硕）</strong>。</p>
+<p>[2023-06-21] 祝贺倪栋伟同学被评为<strong>北京市优秀毕业生</strong>；祝贺倪栋伟、周丽军、王永东3位同学被评为<strong>北京理工大学优秀毕业生</strong>。</p>
 <p>[2023-05-26] 我们有关基于光学-数字联合优化设计紧凑型自由曲面成像系统的论文在线发表于<strong>Optics Express</strong>。</p>
 <p>[2023-05-20] 恭喜魏利博士顺利通过博士后出站答辩，并即将前往上海理工大学任教。</p>
 <div class="row"><div class="col-6"><section class="box feature">
@@ -68,6 +71,9 @@
 </section></div></div>
 <p>[2023-05-04] 我们有关基于NURBS自由曲面的并行光线追迹的论文在线发表于<strong>Chinese Optics Letters</strong>。</p>
 <p>[2023-04-06] 我们有关复杂光学曲面数理描述和设计方法研究的<strong>特邀综述论文</strong>在线发表于<strong>光学学报</strong>，并被选为<strong>封底文章</strong>。<a href="https://mp.weixin.qq.com/s/VMDZm1E4fzqKbq30SZBTYQ">媒体宣传报道</a></p>  </p>
+<div class="row"><div class="col-4"><section class="box feature">
+<a class="image featured"><img src="images/aos202308backcover.jpg" alt="" /></a>
+</section></div></div>
 <p>[2023-04-06] 我们有关易于多面共体加工的自由曲面离轴三反系统设计的论文在线发表于<strong>光学学报</strong>。</p>
 <p>[2023-03-18] 我们有关二维扩瞳体全息波导AR系统设计与研制的论文在线发表于<strong>Optics Express</strong>。</p>
 <p>[2023-02-28] 我们有关基于自由波面调控全息元件的全彩近眼AR显示系统设计与研制的论文在线发表于<strong>Optics Letters</strong>。</p>
