--- a/news.html
+++ b/news.html
@@ -62,6 +62,9 @@
 										<h2 class="major"><span>新闻纪录</span></h2>
 
 <p>[2023-06-21] 实验室2023届研究生毕业。感谢侯起超、陈海龙、倪栋伟、李丹阳、张甜、肖钰皓、马骁、周丽军、王永东9位同学为实验室作出的贡献，祝大家前程似锦！</p>
+<div class="row"><div class="col-8"><section class="box feature">
+<a class="image featured"><img src="images/2023grad.jpg" alt="" /></a>
+</section></div></div>
 <p>[2023-06-21] 祝贺王永东同学的硕士学位论文被评为<strong>北京理工大学优秀硕士学位论文（校优硕）</strong>。</p>
 <p>[2023-06-21] 祝贺倪栋伟同学被评为<strong>北京市优秀毕业生</strong>；祝贺倪栋伟、周丽军、王永东3位同学被评为<strong>北京理工大学优秀毕业生</strong>。</p>
 <p>[2023-05-26] 我们有关基于光学-数字联合优化设计紧凑型自由曲面成像系统的论文在线发表于<strong>Optics Express</strong>。</p>
