--- a/fzx_personal.html
+++ b/fzx_personal.html
@@ -100,6 +100,9 @@
 <h3>代表性学术成果</h3>
 <p></p>
 
+<p class="class2">[30]	廖清明, 冯泽心*. “面向光束整形的自由曲面衍射光学设计方法,” <strong>红外与激光工程</strong>, 52(7): 20230430, 2023.<strong>（特邀综述）</strong></p>
+<p>Qingming Liao, Zexin Feng*. “Design methods of freeform surface diffractive optics for beam shaping,” <strong>Infrared and Laser Engineering</strong>, 52(7): 20230430, 2023. <strong> (Invited review)</strong></p>
+
 <p>[29]	Haisong Tang, Zexin Feng*, Dewen Cheng, and Yongtian Wang, "Parallel ray tracing through freeform lenses with NURBS surfaces," <strong>Chinese Optics Letters</strong> 21(5), 052201 (2023).</p>
 
 <p>[28]	Jia Si, Zexin Feng*, Dewen Cheng, and Yongtian Wang, "Freeform beam splitting system design for generating an array of identical sub-beams," <strong>Optics Express</strong> 29, 29918-29935 (2021).</p>
