--- a/news.html
+++ b/news.html
@@ -61,6 +61,10 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
 
+<p>[2023-08-01] 我们有关基于深度学习进行自由曲面成像系统多解快速自动化设计的论文在线发表于顶级期刊<strong>Photonics Research</strong>。</p>
+<p>[2023-07-28] 我们有关基于方域正交多项式自由曲面的成像系统设计的<strong>特邀论文</strong>在线发表于<strong>红外与激光工程</strong>。</p>
+<p>[2023-07-28] 我们有关面向光束整形的自由曲面衍射光学设计方法的<strong>特邀综述论文</strong>在线发表于<strong>红外与激光工程</strong>。</p>
+<p>[2023-07-25] 欢迎姜南顺、陈国根、金硕、李萌萌、谭欣、唐泽奥、汪佳琪、王祖健、张露曦、赵祖东10位同学加入实验室团队！</p>     
 <p>[2023-06-21] 实验室2023届研究生毕业。感谢侯起超、陈海龙、倪栋伟、李丹阳、张甜、肖钰皓、马骁、周丽军、王永东9位同学为实验室作出的贡献，祝大家前程似锦！</p>
 <div class="row"><div class="col-8"><section class="box feature">
 <a class="image featured"><img src="images/2023grad.jpg" alt="" /></a>
