--- a/publications.html
+++ b/publications.html
@@ -101,6 +101,14 @@ a:active {
 
 <h3>2023年</h3>
 
+<p>[90]	Boyu Mao, Tong Yang*, Huiming Xu, Wenchen Chen, Dewen Cheng, and Yongtian Wang, "FreeformNet: fast and automatic generation of multiple-solution freeform imaging systems enabled by deep learning," <strong>Photonics Research</strong>, 11(8), 1408-1422 (2023).<a href="http://dx.doi.org/10.1364/PRJ.492938"> DOI: 10.1364/PRJ.492938</a></p>
+
+<p class="class2">[89]	周丽军, 杨通*, 程德文, 王涌天. “基于方域正交多项式自由曲面的成像系统设计方法,” <strong>红外与激光工程</strong>, 52(7): 20230317, 2023.<a href="http://www.irla.cn/cn/article/doi/10.3788/IRLA20230317">DOI: 10.3788/IRLA20230317</a><strong>（特邀论文）</strong></p>
+<p>Lijun Zhou, Tong Yang*, Dewen Cheng, Yongtian Wang. “Design method of imaging systems using square-domain orthogonal polynomials freeform surface,” <strong>Acta Optica Sinica</strong>, 52(7): 20230317, 2023. <a href="http://www.irla.cn/cn/article/doi/10.3788/IRLA20230317">DOI: 10.3788/IRLA20230317</a><strong> (Invited paper)</strong></p>
+
+<p class="class2">[88]	廖清明, 冯泽心*. “面向光束整形的自由曲面衍射光学设计方法,” <strong>红外与激光工程</strong>, 52(7): 20230430, 2023.<a href="http://www.irla.cn/cn/article/doi/10.3788/IRLA20230430">DOI: 10.3788/IRLA20230430</a><strong>（特邀综述）</strong></p>
+<p>Qingming Liao, Zexin Feng*. “Design methods of freeform surface diffractive optics for beam shaping,” <strong>Infrared and Laser Engineering</strong>, 52(7): 20230430, 2023. <a href="http://www.irla.cn/cn/article/doi/10.3788/IRLA20230430">DOI: 10.3788/IRLA20230430</a><strong> (Invited review)</strong></p>
+
 <p>[87]	Tong Yang, Huiming Xu, Dewen Cheng*, and Yongtian Wang, "Design of compact off-axis freeform imaging systems based on optical-digital joint optimization," <strong>Optics Express</strong>, 31(12), 19491-19509 (2023).<a href="https://doi.org/10.1364/OE.492199"> DOI: 10.1364/OE.492199</a></p>
 
 <p>[86]	Haisong Tang, Zexin Feng*, Dewen Cheng, and Yongtian Wang, "Parallel ray tracing through freeform lenses with NURBS surfaces," <strong>Chinese Optics Letters</strong>, 21(5), 052201 (2023).<a href="https://doi.org/10.3788/COL202321.052201"> DOI:  10.3788/COL202321.052201</a></p>
