--- a/yt_personal.html
+++ b/yt_personal.html
@@ -101,7 +101,7 @@
 <p>[1]	Boyu Mao, Tong Yang*, Huiming Xu, Wenchen Chen, Dewen Cheng, and Yongtian Wang, "FreeformNet: fast and automatic generation of multiple-solution freeform imaging systems enabled by deep learning," <strong>Photonics Research</strong>, 11(8), 1408-1422 (2023).</p>
 
 <p class="class2">[2]	周丽军, 杨通*, 程德文, 王涌天. “基于方域正交多项式自由曲面的成像系统设计方法,” <strong>红外与激光工程</strong>, 52(7): 20230317, 2023.<strong>（特邀论文）</strong></p>
-<p>Lijun Zhou, Tong Yang*, Dewen Cheng, Yongtian Wang. “Design method of imaging systems using square-domain orthogonal polynomials freeform surface,” <strong>Acta Optica Sinica</strong>, 52(7): 20230317, 2023. <strong> (Invited paper)</strong></p>
+<p>Lijun Zhou, Tong Yang*, Dewen Cheng, Yongtian Wang. “Design method of imaging systems using square-domain orthogonal polynomials freeform surface,” <strong>Infrared and Laser Engineering</strong>, 52(7): 20230317, 2023. <strong> (Invited paper)</strong></p>
 
 <p>[3]	Tong Yang, Huiming Xu, Dewen Cheng*, and Yongtian Wang, "Design of compact off-axis freeform imaging systems based on optical-digital joint optimization," <strong>Optics Express</strong>, 31(12), 19491-19509 (2023).</p>
 <p>[4]	Yongdong Wang, Tong Yang*, Dongwei Ni, Dewen Cheng, and Yongtian Wang, "Design of an off-axis near-eye AR display system based on a full-color freeform holographic optical element," <strong>Optics Letters</strong> 48(5), 1288-1291 (2023).</p>
