--- a/members.html
+++ b/members.html
@@ -93,6 +93,7 @@
                                                             <p class="class2" align="left">SPIE、IET、OSA、COS、CIS会士（Fellow）</p>
                                                             <p class="class2" align="left">研究方向：技术光学、虚拟现实与增强现实</p>
                                                             <p class="class2" align="left">Email：wyt@bit.edu.cn</p>
+                                                            <p class="class2" align="left"><a href="wyt_personal.html">个人主页</a></p>
 
 
 														</section>
@@ -123,6 +124,7 @@
 
                                                             <p class="class2" align="left">博士：北京理工大学</p>
                                                             <p class="class2" align="left">Email：cdwlxk@bit.edu.cn</p>
+                                                             <p class="class2" align="left"><a href="cdw_personal.html">个人主页</a></p>
 
 
 														</section>
@@ -156,6 +158,7 @@
 
                                                             <p class="class2" align="left">博士：清华大学</p>
                                                             <p class="class2" align="left">Email：fzx@bit.edu.cn</p>
+                                                             <p class="class2" align="left"><a href="fzx_personal.html">个人主页</a></p>
 
 
 														</section>
@@ -184,10 +187,11 @@
                                                             <p class="class2" align="left">博士 长聘副教授/特别研究员 博士生导师</p>
 <p class="class2" align="left">入选中国科协青托、光学工程学会优博</p>
                                                            
-                                                            <p class="class2" align="left">研究方向：自由曲面光学、光学设计、新型光学成像、全息光学、微纳光学</p>
+                                                            <p class="class2" align="left">研究方向：自由曲面光学、光学设计、AR显示、计算成像、全息与微纳光学</p>
 
                                                             <p class="class2" align="left">博士：清华大学</p>
                                                             <p class="class2" align="left">Email：yangtong@bit.edu.cn</p>
+                                                             <p class="class2" align="left"><a href="yt_personal.html">个人主页</a></p>
 
 
 														</section>
@@ -220,6 +224,7 @@
 
                                                             <p class="class2" align="left">博士：北京大学</p>
                                                             <p class="class2" align="left">Email：cheng.chi@bit.edu.cn</p>
+                                                             <p class="class2" align="left"><a href="cc_personal.html">个人主页</a></p>
 
 
 														</section>
@@ -248,6 +253,7 @@
 
                                                             <p class="class2" align="left">博士：（美国）中佛罗里达大学</p>
                                                             <p class="class2" align="left">Email：jhxiong@bit.edu.cn</p>
+                                                             <p class="class2" align="left"><a href="xjh_personal.html">个人主页</a></p>
 
 
 														</section>
