--- a/yt_personal.html
+++ b/yt_personal.html
@@ -74,7 +74,7 @@
 <h3 align="left">Email：yangtong@bit.edu.cn</h3>
 <p>&nbsp;</p>
 <h3>个人简介</h3>
-<p>杨通，男，博士，北京理工大学光电学院长聘副教授/特别研究员、博士生导师。长期在应用光学、光学设计领域从事教学和科研工作，主要研究方向包括光学设计、自由曲面光学、光学成像、衍射与微纳光学等方面。主持国家重点研发计划课题、国家自然科学基金面上项目与青年项目、北京市自然科学基金面上项目、和企业/研究所合作的技术开发等多项纵向与横向项目。发表论文50余篇，其中以第一或者通讯作者在Light: Science & Applications（Nature旗下期刊，2021年影响因子20.257）、Photonics Research、Optics Letters、Optics Express等期刊发表录用论文30余篇。已获得授权发明专利41项，包括美国专利16项。入选中国科协青年人才托举计划项目，曾获得金国藩青年学子奖（奖励高校教师）、第四届全国光学工程学科优秀博士学位论文等奖励。指导的研究生多次获得校级优秀学位论文、市级或校级优秀毕业生、国家奖学金等荣誉称号，或者在光学设计竞赛中获奖。</p>
+<p>杨通，男，博士，北京理工大学光电学院长聘副教授/特别研究员、博士生导师。长期在应用光学、光学设计领域从事教学和科研工作，主要研究方向包括光学设计、自由曲面光学、AR显示、光学与计算成像、衍射与微纳光学等方面。主持国家重点研发计划课题、国家自然科学基金面上项目与青年项目、北京市自然科学基金面上项目、和企业/研究所合作的技术开发等多项纵向与横向项目。发表论文50余篇，其中以第一或者通讯作者在Light: Science & Applications（Nature旗下期刊，2021年影响因子20.257）、Photonics Research、Optics Letters、Optics Express等期刊发表录用论文30余篇。已获得授权发明专利41项，包括美国专利16项。入选中国科协青年人才托举计划项目，曾获得金国藩青年学子奖（奖励高校教师）、第四届全国光学工程学科优秀博士学位论文等奖励。指导的研究生多次获得校级优秀学位论文、市级或校级优秀毕业生、国家奖学金等荣誉称号，或者在光学设计竞赛中获奖。</p>
 <h3>教育经历</h3>
 <p>2012.08-2017.07，清华大学，光学工程专业，博士</p>
 <p>2008.09-2012.06，天津大学，（光电）信息工程专业，学士</p>
@@ -86,7 +86,7 @@
 <p>2017.08-2022.06，北京理工大学光电学院，预聘助理教授/特别副研究员</p>
 
 <h3>研究领域</h3>
-<p>自由曲面光学、光学设计、光学与计算成像、衍射与微纳光学、增强现实、机器学习</p>
+<p>自由曲面光学、光学设计、光学与计算成像、衍射与微纳光学、AR显示、机器学习</p>
 
 <h3>主讲课程</h3>
 <p>主讲本科生课程《光学系统设计与工艺》与《复变函数与数理方程》、研究生课程《光学自由曲面技术》</p>
