--- a/members.html
+++ b/members.html
@@ -1823,7 +1823,7 @@
 																	<td>王庆丰</td>
 																	<td>2009-2013 博士</td>
 																	<td>正交多项式光学曲面描述方法与自由曲面棱镜设计加工研究</td>
-                                                                    <td>航天科工二院25所->北京航宇荣康</td>
+                                                                    <td>航天科工二院25所->北京航宇荣康<br/>->华为->联创光电</td>
                                                                     <td></td>
 																</tr>
                                       
