--- a/publications.html
+++ b/publications.html
@@ -101,6 +101,8 @@ a:active {
 
 <h3>2023年</h3>
 
+<p>[91]	Dewen Cheng, Danyang Li, Cheng Yao*, Hailong Chen, Cheng Chi, and Yongtian Wang, "Automatic control method for freeform surface shapes," <strong>Optics Express</strong>, 31(18), 29019-29036 (2023).<a href="https://doi.org/10.1364/OE.495788"> DOI: 10.1364/OE.495788</a></p>
+
 <p>[90]	Boyu Mao, Tong Yang*, Huiming Xu, Wenchen Chen, Dewen Cheng, and Yongtian Wang, "FreeformNet: fast and automatic generation of multiple-solution freeform imaging systems enabled by deep learning," <strong>Photonics Research</strong>, 11(8), 1408-1422 (2023).<a href="http://dx.doi.org/10.1364/PRJ.492938"> DOI: 10.1364/PRJ.492938</a></p>
 
 <p class="class2">[89]	周丽军, 杨通*, 程德文, 王涌天. “基于方域正交多项式自由曲面的成像系统设计方法,” <strong>红外与激光工程</strong>, 52(7): 20230317, 2023.<a href="http://www.irla.cn/cn/article/doi/10.3788/IRLA20230317">DOI: 10.3788/IRLA20230317</a><strong>（特邀论文）</strong></p>
