--- a/news.html
+++ b/news.html
@@ -60,7 +60,7 @@
 								<!-- Features -->
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
-
+<p>[2023-08-16] 我们有关自由曲面面形自动控制方法的论文在线发表于<strong>Optics Express</strong>。</p>
 <p>[2023-08-01] 我们有关基于深度学习进行自由曲面成像系统多解快速自动化设计的论文在线发表于顶级期刊<strong>Photonics Research</strong>。</p>
 <p>[2023-07-28] 我们有关基于方域正交多项式自由曲面的成像系统设计的<strong>特邀论文</strong>在线发表于<strong>红外与激光工程</strong>。</p>
 <p>[2023-07-28] 我们有关面向光束整形的自由曲面衍射光学设计方法的<strong>特邀综述论文</strong>在线发表于<strong>红外与激光工程</strong>。</p>
