--- a/cdw_personal.html
+++ b/cdw_personal.html
@@ -120,6 +120,8 @@ Optics Letter, Optics Express, Applied optics 特邀审稿人</p>
 <h3>代表性学术成果</h3>
 <p></p>
 
+<p class="class2">[91]	程德文*, 黄逸伦, 李阳, 侯起超, 李丹阳, 张甜, 陈海龙, 王涌天. “超短焦偏振折反射虚拟现实镜头设计方法,” <strong>光学学报</strong>, 43(15): 1522001, 2023.<a href="http://www.opticsjournal.net/Articles/OJf3a28b37bab08e6f/Abstract">DOI: 10.3788/AOS230757</a><strong> (特邀论文)</strong></p>
+<p>Dewen Cheng*, Yilun Huang, Yang Li, Qichao Hou, Danyang Li, Tian Zhang, Hailong Chen, Yongtian Wang. “Design method of ultrashort focal polarization catadioptric virtual reality lenses,” <strong>Acta Optica Sinica</strong>, 43(15): 1522001, 2023. <a href="http://www.opticsjournal.net/Articles/OJf3a28b37bab08e6f/Abstract">DOI: 10.3788/AOS230757</a><strong> (Invited paper)</strong></p>
 <p>[90]	Dewen Cheng, Danyang Li, Cheng Yao*, Hailong Chen, Cheng Chi, and Yongtian Wang, "Automatic control method for freeform surface shapes," <strong>Optics Express</strong>, 31(18), 29019-29036 (2023).<a href="https://doi.org/10.1364/OE.495788"> DOI: 10.1364/OE.495788</a></p>
 <p>[89]	Boyu Mao, Tong Yang*, Huiming Xu, Wenchen Chen, Dewen Cheng, and Yongtian Wang, "FreeformNet: fast and automatic generation of multiple-solution freeform imaging systems enabled by deep learning," <strong>Photonics Research</strong>, 11(8), 1408-1422 (2023).<a href="http://dx.doi.org/10.1364/PRJ.492938"> DOI: 10.1364/PRJ.492938</a></p>
 
