--- a/news.html
+++ b/news.html
@@ -60,6 +60,8 @@
 								<!-- Features -->
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
+
+<p>[2023-08-18] 我们有关超短焦偏振折反射虚拟现实镜头设计方法的<strong>特邀论文</strong>在线发表于<strong>光学学报</strong>。</p>
 <p>[2023-08-16] 我们有关自由曲面面形自动控制方法的论文在线发表于<strong>Optics Express</strong>。</p>
 <p>[2023-08-01] 我们有关基于深度学习进行自由曲面成像系统多解快速自动化设计的论文在线发表于顶级期刊<strong>Photonics Research</strong>。</p>
 <p>[2023-07-28] 我们有关基于方域正交多项式自由曲面的成像系统设计的<strong>特邀论文</strong>在线发表于<strong>红外与激光工程</strong>。<a href="https://mp.weixin.qq.com/s/Z6cDzo118ePoB01u0N_C7g">媒体宣传报道</a></p>
